--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.18.1",
+    "material-ui-chip-input": "^0.14.0",
     "react": "^15.5.4",
     "react-addons-update": "^15.5.2",
     "react-dom": "^15.5.4",
