--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.18.1",
     "material-ui-chip-input": "^0.14.0",
+    "muicss": "^0.9.16",
     "react": "^15.5.4",
     "react-addons-update": "^15.5.2",
     "react-dom": "^15.5.4",
