--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "install": "^0.10.1",
     "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.18.1",
     "material-ui-chip-input": "^0.14.0",
     "muicss": "^0.9.16",
+    "npm": "^4.6.1",
     "react": "^15.5.4",
     "react-addons-update": "^15.5.2",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-flexgrid": "^0.8.1",
     "react-redux": "^5.0.5",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
