--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-addons-update": "^15.5.2",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-flexbox-grid": "^1.1.3",
     "react-flexgrid": "^0.8.1",
     "react-redux": "^5.0.5",
     "react-tap-event-plugin": "^2.0.1",
